--- a/package.json
+++ b/package.json
@@ -13,27 +13,35 @@
     "check": "biome check"
   },
   "dependencies": {
+    "@base-ui/react": "^1.0.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
+    "@tanstack/react-form": "^1.27.4",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/router-plugin": "^1.132.0",
+    "@tanstack/zod-form-adapter": "^0.42.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "gql.tada": "^1.9.0",
-    "lucide-react": "^0.544.0",
+    "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
     "nitro": "latest",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "rrule": "^2.8.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.6",
     "urql": "^5.0.1",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "wonka": "^6.3.5",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
@@ -46,9 +54,15 @@
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^27.0.0",
     "msw": "^2.12.4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
-    "vitest": "^3.0.5",
+    "vitest": "^4.0.16",
     "web-vitals": "^5.1.0"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
